tests/typing/fail/singleton_not_shared.rb

class A
end

a = A.new
b = A.new

def a.f()
end

b.f()
